# sparkfmt

./: .editorconfig  .gitattributes  .gitignore  .npmignore  AGENTS.md  ANALYSIS_REPORT.md  CONTRIBUTING.md  Cargo.toml  FORMATTING_GUIDE.md  GRAMMAR_DRIVEN_ARCHITECTURE.md  GRAMMAR_REFACTOR_PROPOSAL.md  HINTS_AND_CONTEXT.md  IMPLEMENTATION.md  KNOWN_BUGS.md  KNOWN_ISSUES.md  README.md  REFACTOR_TO_ANTLR4.md  SECOND_ROUND_ANALYSIS.md  STYLE_GUIDE.md  TEST_EXPECTATIONS.md  biome.json  check_sci_notation.js  check_sci_upper.js  check_token_behavior.js  check_token_types.js  edge-cases-complex.test.ts.bak  format-sql.sh  package-lock.json  package.json  test_inline_comment.sh  test_upper_only.js  tsconfig.base.json
crates/sparkfmt-core/: Cargo.toml  KNOWN_PREDICATES.json  build.rs  build_antlr.py
crates/sparkfmt-core/examples/: format_example.rs
crates/sparkfmt-core/src/: antlr4rust_workarounds.rs  antlr_parser.rs  ast_converter.rs  error.rs  formatter.rs  functions.rs  generated.rs  hints.rs  ir.rs  keywords.rs  lib.rs  parser.rs
crates/sparkfmt-core/src/antlr_generated/: mod.rs  sqlbaselexer.rs  (+3 more)
crates/sparkfmt-core/tests/: acceptance.rs  casing_tests.rs  comment_and_hint_tests.rs  comment_handling.rs  comment_preservation_tests.rs  context_sensitive_tests.rs  ddl_dml_tests.rs  edge_cases.rs  expression_parsing.rs  from_clause_features.rs  group_by_tests.rs  hints_and_context_tests.rs  is_distinct_from_tests.rs  join_variants.rs  literal_tests.rs  spark_clauses.rs  subquery_indentation_tests.rs
crates/sparkfmt-wasm/: Cargo.toml
crates/sparkfmt-wasm/src/: lib.rs
(+74 files in other folders)
