[workspace]
members = [
    "crates/sparkfmt-core",
    "crates/sparkfmt-wasm",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["sparkfmt contributors"]
license = "MIT"
repository = "https://github.com/JacobKnightley/ms-spark-formatter"

[workspace.dependencies]
# Core dependencies
regex = "1.10"
lazy_static = "1.4"

# WASM dependencies
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

# Testing dependencies
insta = "1.34"

[profile.release]
opt-level = "z"
lto = true
