[package]
name = "sparkfmt-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
regex.workspace = true
lazy_static.workspace = true

# ANTLR runtime (for generated parser)
antlr4rust = "0.5"

[dev-dependencies]
insta.workspace = true
